src/objects/Rep_Split__c.object
<CustomObject>
    <fields>
        <fullName>Grant_Access_to_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Designates the rep being granted access to the Split Rep.</description>
        <inlineHelpText>Designates the rep being granted access to the Split Rep.</inlineHelpText>
        <label>Grant Access to Rep</label>
        <referenceTo>Rep__c</referenceTo>
        <relationshipLabel>Rep Splits (Grant Access to Rep)</relationshipLabel>
        <relationshipName>Rep_Splits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rep_Split_Key__c</fullName>
        <externalId>true</externalId>
        <label>Rep Split Key</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Rep__c</fullName>
        <description>This is the rep we are splitting, i.e., granting access to other reps.</description>
        <label>Split Rep</label>
        <referenceTo>Rep__c</referenceTo>
        <relationshipLabel>Rep Splits</relationshipLabel>
        <relationshipName>Rep_Splits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Rep Split</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Rep Split Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rep Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>